--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,13 +3,10 @@
   "parserOptions": {
     "project": "./tsconfig.json"
   },
-    "plugins": [
-    "prettier",
-    "@typescript-eslint"
-  ],
+  "plugins": ["prettier", "@typescript-eslint"],
   "rules": {
-  "@typescript-eslint/no-redeclare": ["off"],
-  "@typescript-eslint/space-before-function-paren": ["off"],
-  "@typescript-eslint/strict-boolean-expressions": ["off"]
+    "@typescript-eslint/no-redeclare": ["off"],
+    "@typescript-eslint/space-before-function-paren": ["off"],
+    "@typescript-eslint/strict-boolean-expressions": ["off"]
   }
 }
